# dioxus-app-024

./: Cargo.toml  Dioxus.toml
src/: main.rs
src/atoms/: title.rs
src/pages/: home.rs  mod.rs  other.rs
